connect new mapLoader